prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_arithmetic_mismatch.nut
// EXPECTED: compile-time error - int arithmetic result assigned to string
local a: int = 10
local b: int = 20
local c: string = a + b
return c
